--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/weCoder/">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="/weCoder/about.html">About</a>
                     </li>
 
