--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,12 @@
             </button>
             
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/weCoder/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="/about.html">About</a>
+                        <a class="nav-link" href="/weCoder/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -33,6 +33,7 @@
                             aria-expanded="false">
                             Topics
                         </a>
+
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Technology</a></li>
                             <li><a class="dropdown-item" href="#">Science</a></li>
@@ -44,10 +45,9 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/weCoder/contact.html">Contact Us</a>
                     </li>
-                </ul>
-                <form class="d-flex" role="search">
+                </ul>                <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
