--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en">`
     
 <head>
     <meta charset="utf-8">
@@ -22,9 +22,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/weCoder/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/weCoder/">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="/weCoder/about.html">About</a>
                     </li>
 
